Add class to the files
I added class attributes to some elements like h2 (ingredients and instructioins_)to better style them in the way I want

--- a/recipes/chocolate.html
+++ b/recipes/chocolate.html
@@ -10,7 +10,8 @@
     <h1>Classic Chocolate Chip Cookies</h1>
     <p>A timeless American favorite featuring a perfect balance of chewy centers and crisp edges. These cookies combine rich butter and brown sugar with generous amounts of semi-sweet chocolate chips for an irresistible treat that appeals to all ages.</p>
     <img src="../images/chocolate.jpg" alt="A beautiful cholocate chip cookies" width="250" height="250">
-    <h2>Ingredients:</h2>
+    <div class="inline">
+    <h2 class="ingredients">Ingredients:</h2>
     <ul>
         <li>2¼ cups all-purpose flour</li>
         <li>1 teaspoon baking soda</li>
@@ -22,7 +23,7 @@
         <li>2 teaspoons vanilla extract</li>
         <li>2 cups semi-sweet chocolate chips</li>
     </ul>
-    <h2>Instructions:</h2>
+    <h2 class="instructions">Instructions:</h2>
     <ol>
         <li>Preheat oven to 375°F (190°C)</li>
         <li>In a small bowl, mix flour, baking soda, and salt</li>
@@ -34,6 +35,7 @@
         <li>Bake for 9-11 minutes until golden brown</li>
         <li>Cool on baking sheets for 2 minutes, then transfer to wire racks</li>
     </ol>
+    </div>
 <a href="../index.html">Home</a>
 </body>
 </html>
