--- a/recipes/tomotobasilsoup.html
+++ b/recipes/tomotobasilsoup.html
@@ -10,7 +10,7 @@
     <h1>Simple Tomato Basil Soup</h1>
     <p>A comforting, rustic soup that transforms basic ingredients into a flavorful bowl of warmth. The natural sweetness of tomatoes blends with aromatic basil for a classic combination that's both nourishing and elegant in its simplicity.</p>
     <img src="../images/soup.jpg" alt="A beautiful cholocate chip cookies" width="250" height="250">
-    <h2>Ingredients:</h2>
+    <h2 class="ingredients">Ingredients:</h2>
     <ul>
         <li>2 tablespoons olive oil</li>
         <li>1 large onion, chopped</li>
@@ -24,7 +24,7 @@
         <li>Salt and pepper to taste</li>
         <li>½ cup heavy cream (optional)</li>
     </ul>
-    <h2>Instructions:</h2>
+    <h2 class="instructions">Instructions:</h2>
     <ol>
         <li>Heat oil in a large pot over medium heat</li>
         <li>Add onion, garlic, and carrots; cook until softened, about 5 minutes</li>
@@ -35,6 +35,6 @@
         <li>Stir in cream if using, heat through without boiling</li>
         <li>Serve garnished with additional fresh basil</li>
     </ol>
-<a href="../index.html">Home</a>
+<a class="button" href="../index.html">Home</a>
 </body>
 </html>
