Add class attributes
I added the class attributes to styles the h2 elements better

--- a/recipes/vegetable-stirfry.html
+++ b/recipes/vegetable-stirfry.html
@@ -10,7 +10,7 @@
     <h1>Easy Vegetable Stir-Fry</h1>
     <p>A quick, nutritious meal bursting with colorful vegetables in a savory-sweet sauce. This versatile dish comes together in minutes, making it perfect for busy weeknights while still delivering fresh flavors and satisfying crunch.</p>
     <img src="../images/vegetable.jpg" alt="A beautiful cholocate chip cookies" width="250" height="250">
-    <h2>Ingredients:</h2>
+    <h2 class="ingredients">Ingredients:</h2>
     <ul>
         <li>2 tablespoons vegetable oil</li>
         <li>3 cloves garlic, minced</li>
@@ -26,7 +26,7 @@
         <li>2 tablespoons water</li>
         <li>1 tablespoon cornstarch</li>
     </ul>
-    <h2>Instructions:</h2>
+    <h2 class="instructions">Instructions:</h2>
     <ol>
         <li>Heat oil in a large wok or skillet over high heat</li>
         <li>Add garlic and ginger, stir for 30 seconds</li>
@@ -35,6 +35,6 @@
         <li>Pour sauce over vegetables and stir until thickened, about 1 minute</li>
         <li>Serve hot over rice or noodles</li>
     </ol>
-<a href="../index.html">Home</a>
+<a class="button" href="../index.html">Home</a>
 </body>
 </html>
